# tensorflow_cpp_wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tensorflow_cpp_wrapper.cpp  tensorflow_cpp_wrapper.hpp  test.cpp  xor_network.py
models/: graph.pb
